# local-llm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  dockerfile  extract.py  pyproject.toml  requirements.txt  requirments.txt  ui.py
src/docchat/: __main__.py  config.py
src/docchat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/docchat/core/: __init__.py  chunker.py  embedding.py  pdf.py
src/docchat/llm/: __init__.py  client.py
src/docchat/store/: __init__.py  collection.py
src/docchat/ui/: __init__.py  interface.py  styles.css  styles.py
tests/: conftest.py
tests/test_core/: test_chunker.py  test_embedding.py  test_pdf.py
tests/test_integration/: test_rag_pipeline.py
tests/test_llm/: test_client.py
tests/test_store/: test_collection.py
tests/test_ui/: __init__.py  test_interface.py
